syntax ="proto3";


package tutorial;
option optimize_for = SPEED; //optimize_for 加快解析的速度
option java_package = "com.fc.common.socket.msg";
option java_outer_classname="KeepAliveMsg";

message C2S
{
    int64 timestamp = 1;
}

message S2C
{
    int64 timestamp = 1;
}

message C2SMsg  //Request
{
    C2S c2s = 1;
}

message S2CMsg  //Response
{
    int32 code = 1;
    string msg = 2;

    S2C s2c = 3;
}