syntax ="proto3";

package tutorial;
option optimize_for = SPEED; //optimize_for 加快解析的速度
option java_package = "com.fc.common.socket.msg";
option java_outer_classname="ProtoID";

//消息头
enum MsgType{
    DEF = 0;
    MSG_REG = 1;                //注册
    MSG_REG_PUSH = 11;          //注册返回

    //keepalive

    PING = 1001;
    PONG = 1901;
}